--- a/www/apps/book/app/learn/update/page.mdx
+++ b/www/apps/book/app/learn/update/page.mdx
@@ -68,7 +68,7 @@ This will update all Medusa packages to the latest version.
 
 ### Running Migrations
 
-Minor releases may include changes to the database, such as new tables, updates to existing tables, updates after adding links, or data migration scripts.
+Releases may include changes to the database, such as new tables, updates to existing tables, updates after adding links, or data migration scripts.
 
 So, after updating Medusa, run the following command to migrate the latest changes to your database:
 
